--- a/packages/terra-alert/src/orion-fusion-theme/Alert.module.scss
+++ b/packages/terra-alert/src/orion-fusion-theme/Alert.module.scss
@@ -15,7 +15,6 @@
     --terra-alert-section-padding-top: 0.29167rem;
     --terra-alert-custom-text-color: #1c1f21;
     --terra-alert-title-display: block;
-    --terra-alert-title-float: left;
     --terra-alert-title-margin-bottom: 0;
     --terra-alert-title-margin-right: 0.5rem;
     --terra-alert-actions-margin-bottom: 1rem;
